@@ -238,6 +238,7 @@ sge_del_configuration(sge_gdi_ctx_class_t *ctx,
       if (conf_obj != NULL) {
          DPRINTF(("using hostname stored in configuration object\n"));
          strcpy(unique_name, lGetHost(conf_obj, CONF_name));
+         lFreeElem(&conf_obj);
       } else {
          ERROR((SGE_EVENT, MSG_SGETEXT_CANT_DEL_CONFIG2_S, tmp_name));
          answer_list_add(anAnswer, SGE_EVENT,
